# Lunaris

./: .gitignore  CMakeLists.txt  imgui.ini
.github/instructions/: code_base.instructions.md
include/lunaris/core/: application.h  command.h  command_registry.h  job.h  job_system.h  settings.h  theme.h  theme_preset.h
include/lunaris/editor/: activity_bar.h  bottom_panel.h  command_palette.h  document.h  document_manager.h  editor_layer.h  file_operations.h  file_tree.h  menu_bar.h  sidebar.h  status_bar.h  tab_bar.h  text_buffer.h  text_editor.h  undo_manager.h  workspace.h
include/lunaris/plugin/: editor_context.h  plugin.h  plugin_api.h  plugin_loader.h  plugin_manager.h
include/lunaris/ui/: components.h
plugins/theme_plugin/: CMakeLists.txt  theme_plugin.cpp  theme_plugin.h
src/: main.cpp
src/core/: application.cpp  command.cpp  command_registry.cpp  job_system.cpp  settings.cpp  theme.cpp
src/editor/: activity_bar.cpp  bottom_panel.cpp  command_palette.cpp  document.cpp  document_manager.cpp  editor_layer.cpp  file_operations.cpp  file_tree.cpp  menu_bar.cpp  sidebar.cpp  status_bar.cpp  tab_bar.cpp  text_buffer.cpp  text_editor.cpp  undo_manager.cpp  workspace.cpp
src/plugin/: plugin_loader.cpp  plugin_manager.cpp
src/ui/: components.cpp
